Add task queue watcher
